[gd_scene load_steps=12 format=3 uid="uid://dtbn7i43ffud3"]

[ext_resource type="FontFile" uid="uid://bdpbpkhnq8lny" path="res://assets/8-bit-pusab.ttf" id="1_uo0hm"]
[ext_resource type="Script" path="res://src/fishing_lvl/fishing_lvl.gd" id="1_ynd5m"]
[ext_resource type="PackedScene" uid="uid://uuv6r24lldwk" path="res://src/fishing_lvl/end_screen.tscn" id="2_lw2gm"]
[ext_resource type="Texture2D" uid="uid://e6j3nuqccsvs" path="res://assets/background.png" id="3_s6jf6"]
[ext_resource type="PackedScene" uid="uid://de6h5ffhco2kj" path="res://src/fishing_lvl/bobber.tscn" id="4_r0ydv"]
[ext_resource type="PackedScene" uid="uid://sywnhmj87o7k" path="res://src/fishing_lvl/fish.tscn" id="5_u6fi8"]
[ext_resource type="PackedScene" uid="uid://dgkyari10d2gs" path="res://src/fishing_lvl/chest_spawner.tscn" id="6_bmw5w"]
[ext_resource type="Script" path="res://src/fishing_lvl/fishing_lvl_score.gd" id="7_jqe5k"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hi66l"]
size = Vector2(63, 12)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_b0vvb"]
bg_color = Color(0.423529, 0.227451, 0.117647, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ufmk4"]
bg_color = Color(0.4, 0.843137, 0.552941, 1)

[node name="MainFishingLevel" type="Node2D"]
script = ExtResource("1_ynd5m")

[node name="ChestSpawner" parent="." instance=ExtResource("6_bmw5w")]

[node name="UILayer" type="CanvasLayer" parent="."]
process_mode = 2

[node name="EndScreen" parent="UILayer" instance=ExtResource("2_lw2gm")]
visible = false

[node name="Controls" type="RichTextLabel" parent="UILayer"]
anchors_preset = -1
anchor_bottom = 0.197531
offset_left = 65.0
offset_top = 62.0
offset_right = 239.0
offset_bottom = 62.0
theme_override_fonts/normal_font = ExtResource("1_uo0hm")
theme_override_font_sizes/normal_font_size = 10
text = "Reel the green bobber in with
- Left Mouse Button
- Space
- Enter"
metadata/_edit_use_anchors_ = true

[node name="FishingRod" type="StaticBody2D" parent="."]

[node name="Rod" type="ColorRect" parent="FishingRod"]
offset_left = 555.0
offset_top = 68.0
offset_right = 619.0
offset_bottom = 564.0
color = Color(1, 0.772549, 0.533333, 1)

[node name="OceanBG" type="Sprite2D" parent="FishingRod"]
position = Vector2(587, 315.5)
scale = Vector2(1.0625, 0.97921)
texture = ExtResource("3_s6jf6")

[node name="TopEdge" type="CollisionShape2D" parent="FishingRod"]
position = Vector2(587, 74)
shape = SubResource("RectangleShape2D_hi66l")

[node name="BottomEdge" type="CollisionShape2D" parent="FishingRod"]
position = Vector2(587, 557)
shape = SubResource("RectangleShape2D_hi66l")

[node name="Bobber" parent="." instance=ExtResource("4_r0ydv")]
position = Vector2(587, 418)

[node name="Fish" parent="." instance=ExtResource("5_u6fi8")]
position = Vector2(586, 412)
speed_bounds = [8, 25]

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
metadata/_edit_use_anchors_ = true

[node name="ProgressBar" type="ProgressBar" parent="Control" node_paths=PackedStringArray("fish")]
layout_mode = 0
offset_left = 620.0
offset_top = 68.0
offset_right = 645.0
offset_bottom = 562.0
theme_override_styles/background = SubResource("StyleBoxFlat_b0vvb")
theme_override_styles/fill = SubResource("StyleBoxFlat_ufmk4")
fill_mode = 3
show_percentage = false
script = ExtResource("7_jqe5k")
fish = NodePath("../../Fish")
metadata/_edit_use_anchors_ = true

[connection signal="body_entered" from="Fish" to="Fish" method="_on_body_entered"]
[connection signal="body_exited" from="Fish" to="Fish" method="_on_body_exited"]
[connection signal="Lose" from="Control/ProgressBar" to="UILayer/EndScreen" method="_on_progress_bar_lose"]
[connection signal="Win" from="Control/ProgressBar" to="UILayer/EndScreen" method="_on_progress_bar_win"]
